--- a/css/global.css
+++ b/css/global.css
@@ -8,7 +8,7 @@
 /* form */
 fieldset legend{font-size: 18px; font-weight: 700; margin-bottom: 40px;}
 fieldset legend::before{content: ''; display: block; width: 35px; height: 3px; background-color: #2de09f; margin-bottom: 15px;}
-fieldset ul{margin-bottom: 60px;}
+fieldset ul:not(.inputBox-main){margin-bottom: 60px;}
 fieldset .inputBox li div *:first-child ~ :is(input , select){width: 200px;}
 
 /* 게시판 */
